--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,8 @@
   command = "npm run build"
   publish = ".next"
 
-[functions]
-  directory = "netlify/functions"
+[plugins]
+  package = "@netlify/plugin-nextjs"
 
-[dev]
-  command = "npm run dev"
-  port = 3000
+[build.environment]
+  NODE_VERSION = "20"
