--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/next": "^1.4.9",
-    "next": "15.4.1",
-    "react": "19.1.0",
+    "next": "^15.4.1",
+    "react": "^19.1.0",
     "react-countdown": "^2.3.6",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
