--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
