--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.4.1",
-    "react": "^19.1.0",
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
